--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,5 +32,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: website
-        path: WebAppDotNet6/website/**
+        path: website/**
         if-no-files-found: error
