--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -18,8 +18,14 @@ steps:
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
+- task: AzureRmWebAppDeployment@4
   inputs:
-    restoreSolution: '$(solution)'
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Private Test Sub SATISHRA(1a1a4b96-0df2-487e-9d64-f44304383fe6)'
+    appType: 'webAppHyperVContainer'
+    WebAppName: 'wincontainerdevops1'
+    DockerNamespace: 'index.docker.io/sratdocker'
+    DockerRepository: 'dotnet6nanocertutil'
 
 - task: VSBuild@1
   inputs:
